<resources>
    <string name="app_name">chataja</string>
    <string name="room">Room</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="login">Login</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="no_users_found">No users found!</string>
    <string name="write_a_message">Write a message...</string>
    <string name="logout">Logout</string>
</resources>
